RESOLVED FIXED53087
Refactoring: replaced a hanging "else" with a "return" statement
https://bugs.webkit.org/show_bug.cgi?id=53087
Summary Refactoring: replaced a hanging "else" with a "return" statement
Marcilio
Reported 2011-01-25 07:35:51 PST
Refactoring: replaced a hanging "else" within an #if PLATFORM(MAC) block with a "return" statement so that the code is hopefully easier to read and less error prone.
Attachments
Patch (2.37 KB, patch)
2011-01-25 07:57 PST, Marcilio
no flags
Marcilio
Comment 1 2011-01-25 07:57:40 PST
Darin Adler
Comment 2 2011-01-25 08:24:36 PST
Comment on attachment 80065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=80065&action=review > Source/JavaScriptCore/ChangeLog:10 > + with a "return" so that the code is more readable and less error pro prone
WebKit Commit Bot
Comment 3 2011-01-25 10:28:42 PST
Comment on attachment 80065 [details] Patch Clearing flags on attachment: 80065 Committed r76609: <http://trac.webkit.org/changeset/76609>
WebKit Commit Bot
Comment 4 2011-01-25 10:28:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.